[11.26] released ...
* The new "-S variable[=value]" command line option sets the internal option
  "variable", and, in case of a string option, assigns "value" to it (based
  on a request by Dmitry Butskoy).
* When the "next" or newline command is typed as the first command after a
  folder has been opened, the first (new) message is printed even if a
  folder hook has been executed previously (bugreport by Stephen Isard).
* In combination with OpenSSL, when a SIGPIPE was received on an SSL socket
  during a call to SSL_read() e.g. because an IMAP connection had timed out,
  a segmentation fault occurred because OpenSSL apparently cannot handle
  calls to SSL_shutdown() from the signal handler. This has been fixed (bug
  reported by Svend Sorensen).
* Building without socket support works again (Patch by Fernando J. Pereda).

[11.25] released 7/29/05
* The base64 encoder used an invalid encoding for the last unit of data if
  (bytes_of_input % 3 == 2); it wrote two encoded bits beyond the last byte
  then. Most base64 decoders, including nail's own, ignore such bits since
  base64 data is always a multiple of 8-bit bytes. This might explain why
  no harm caused by this error has been found for years. (Bug reported by
  Lukasz Iwaszkiewicz).
* When a completely cached IMAP message was copied on a server supporting
  the UIDPLUS IMAP extension and the message had not been printed during
  the current session yet, the cached entry for the target message contained
  the message body twice. This bug has been fixed, but cached messages
  written by previous nail versions may still suffer from this error. To get
  rid of them, delete them from the IMAP cache directory. The file README in
  that directory explains its structure.
* When sending messages, input data that lacks a terminating newline is now
  always encoded in quoted-printable.
* Wildcard host names in certificates according to RFC 2595 are now accepted
  (Bug reported by Svend Sorensen).